--- a/index.html
+++ b/index.html
@@ -149,8 +149,10 @@
             </a>
           </div>
           <div class="achievement-image">
-        <img src="data/32nd-place-at-the-World-Cup-Final.png" 
-             alt="Prathamesh Jawkar World Cup Final Silver Medal" />
+        <img src="data/WorldCupFinal.png" 
+             alt="Prathamesh Jawkar World Cup Final Silver Medal" 
+             loading="lazy"
+             />
           </div>
         </div>
       </div>
